# hackbot-human-comparison

./: README.md  foundry_repos.csv  human_comparison_app.py  pyproject.toml
src/human_comparison/: contest_aggregate.py  contest_processor.py
src/human_comparison/utils/: known_replacements.py  mdprocessor.py  toolbox.py
