[project]
name = "hackathon-human-comparison"
version = "0.1.0"
description = "Hackathon Human Comparison"
authors = [
    { name = "Dimitrios Karkoulias", email = "dimitrios@gatlingx.com" }
]
dependencies = [
    "loguru",
    "python-dotenv",
    "requests",
    "langchain-text-splitters",
]

readme = "README.md"
requires-python = ">=3.11.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.7.3",
    "black>=24.10.0",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/human_comparison"]
